address Dal review

--- a/docs/use-the-network/run-a-network-server/run-a-network-server.mdx
+++ b/docs/use-the-network/run-a-network-server/run-a-network-server.mdx
@@ -15,7 +15,8 @@ blockchain primitives interoperate with LoRaWAN routing can be read about
 [here](/lorawan-on-helium).
 
 In this section, we will provide a step-by-step guide on actually getting a
-LoRaWAN Network Server (LNS) on Helium up and running.
+LoRaWAN Network Server (LNS) based on Helium's open-source Console up and
+running.
 
 - [buy an OUI](/use-the-network/buy-an-oui)
 - [run Console](/use-the-network/run-console)
@@ -25,11 +26,11 @@ Before pursuing this configuration though, it is worth considering.
 **Do I need to own my own OUI and operate my own Console?**
 
 - If you are developing a few prototype devices, it might not be time to operate
-  a network server. Helium operates [Console](/use-the-network/console) where
-  you can easily manage devices for an organization without dealing with OUI
-  management; you only pay for packets and new accounts start with a free 10,000
-  DC.
+  a network server. Helium hosts and operates
+  [Console](/use-the-network/console) where you can easily manage devices for an
+  organization without dealing with OUI management; you only pay for packets and
+  new accounts start with a free 10,000 DC.
 
 - An OUI costs $900 in Data Credits at a minimum ($100 for the OUI and $800 for
-  the smallest address slab), so if that cost if prohibitive, use the Helium
-  console.
+  the smallest address slab), so if that cost is prohibitive, use Helium's
+  Console.
