--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -12,7 +12,9 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 ## Overview
 
-Validators are a new entity on the Helium Blockchain that will perform the work of the consensus group including verifying transactions and adding new blocks to the blockchain.
+Validators are a new entity on the Helium Blockchain that will perform the work of the consensus group including verifying transactions and adding new blocks to the blockchain. 
+
+More information about validators and to register interest in staking go [here](https://www.helium.com/stake).
 
 To test validator nodes:
 * users need test tokens (TNT) to stake test validator nodes
