updates for docs
content updates

--- a/docs/mine-hnt/validators/requirements.mdx
+++ b/docs/mine-hnt/validators/requirements.mdx
@@ -11,11 +11,10 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 # Technical Requirements
 
 Based on early tests, validator node requirements include:
-
-*  Hardware specs:
-    * CPU: Intel processor 3.0 GHz or above with 2 cores or equivalent
-    * Memory: 8 GB or above
-    * Storage: 256 GB or more 
+* Operating system: Ubuntu 20.04 LTS (if running from source)
+* CPU: Intel processor 3.0 GHz or above with 2 cores or equivalent
+* Memory: 8 GB or above
+* Storage: 256 GB or more 
 
 * If using a cloud provider (recommended) an AWS EC2 instance T2 large, xlarge or equivalent
 
