--- a/docs/mine-hnt/validators/troubleshoot.mdx
+++ b/docs/mine-hnt/validators/troubleshoot.mdx
@@ -10,7 +10,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Troubleshooting
 
-There is a #validator [Discord](https://discord.gg/helium)  channel available to reach other testnet participants. Also use this channel to share feeback and report issues discovered while testing.
+There is a ```#validator``` [Discord](https://discord.gg/helium)  channel available to reach other testnet participants. Also use this channel to share feedback and report issues.
 
 ## View logs
 This is always helpful to get an idea of what's going on:
@@ -18,7 +18,7 @@ This is always helpful to get an idea of what's going on:
 ```docker exec miner tail -F /var/log/miner/console.log```
 
 ## Compromised server
-If you find that the server has been compromised, just wipe it (maybe saving the blocks somewhere), close the hole, stand up a new validator and then transfer the stake to it.
+If you find that the server has been compromised just wipe it (save the blocks to avoid having to resync the entire blockchain), close the hole, stand up a new validator and then transfer the stake to it.
 
 ## Syncing to the blockchain
 Syncing to the blockchain could be impacted for the following reasons:
