--- a/docs/mine-hnt/validators/monitor.mdx
+++ b/docs/mine-hnt/validators/monitor.mdx
@@ -12,7 +12,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 The Docker commands will assume you have the same prefix to get you executing a command within the docker: ```docker exec miner``` . If you want to make it easier, you can always create an alias such as: ```alias miner="docker exec miner miner"```.
 
-## Check the P2P Network
+## Check the p2p network
 
 Perform a health check to see if your validator node can see other validators. 
 
@@ -21,9 +21,6 @@ Once your validator is running perform an initial health check to verify you're 
 Source: ```miner peer book -s```
 
 Docker: ```docker exec miner miner peer book -s```
-
-You will see an output similar to the following:
-[insert screenshot]
 
 Once you have an address listed in ```listen_addrs``` and ```peers``` in the table at the bottom, you're connected to the p2p network and good to go.
 
@@ -35,7 +32,7 @@ Source: ```miner info height```
 
 Docker: ```docker exec miner miner info height```
 
-If you’re syncing, the following should appear:
+If you’re syncing something similar to the following should appear:
 ```
 ~$ miner info height
 6889        280756
