--- a/docs/use-the-network/run-a-network-server/buy-an-oui/buy-an-oui.mdx
+++ b/docs/use-the-network/run-a-network-server/buy-an-oui/buy-an-oui.mdx
@@ -31,7 +31,7 @@ an OUI is $800 for 8 DevAddr's and $100 for the OUI itself.
 
 [The OUI purchase transaction itself](https://github.com/helium/proto/blob/master/src/blockchain_txn_oui_v1.proto)
 incurs a fee based as does any other blockchain transaction; generally this will
-be $0.35-1.00 worth of DC based on how the fields get filled and change the
+be $0.35-1.00 worth of DCs based on how the fields get filled and change the
 transaction size.
 
 # Purchase Transaction
