--- a/docs/use-the-network/run-a-network-server/buy-an-oui/buy-an-oui.mdx
+++ b/docs/use-the-network/run-a-network-server/buy-an-oui/buy-an-oui.mdx
@@ -39,7 +39,7 @@ transaction size.
 You need [the Helium wallet](https://github.com/helium/helium-wallet-rs) to go
 any further. You'll want to
 [create a wallet](https://github.com/helium/helium-wallet-rs#create-a-wallet)
-and to have a bit over $900 in HNT.
+and to have at least $900 in HNT (base on current HNT Oracle pricing).
 
 ## Create Data Credits
 
