--- a/docs/use-the-network/run-a-network-server/buy-an-oui/buy-an-oui.mdx
+++ b/docs/use-the-network/run-a-network-server/buy-an-oui/buy-an-oui.mdx
@@ -57,7 +57,7 @@ $ ./helium-wallet balance
 +-----------------------------------------------------+------------+--------------+-----------------+
 ```
 
-If we don't have an account balance of at least 90000000 DCs ($900), we need to
+If we don't have an account balance of at least `90,000,000` DCs ($900), we need to
 create the data credits now.
 
 Inspect
