--- a/docs/use-the-network/run-a-network-server/buy-an-oui/buy-an-oui.mdx
+++ b/docs/use-the-network/run-a-network-server/buy-an-oui/buy-an-oui.mdx
@@ -70,7 +70,7 @@ represented in 10^-8 dollars. Suppose it is currently $4.5, so we would get:
 ```
 
 Since 1 DC = $.00001 = $10^-5 and we need to normalize with the $10^-8 from the
-oracle price, we can plug the following into our favorite calculate (Python for
+oracle price, we can plug the following into our favorite calculate (for example, in Python):
 me):
 
 ```text
