--- a/docs/use-the-network/run-a-network-server/buy-an-oui/buy-an-oui.mdx
+++ b/docs/use-the-network/run-a-network-server/buy-an-oui/buy-an-oui.mdx
@@ -120,4 +120,4 @@ and on
 [this list here](https://api.helium.io/v1/ouis?cursor=eyJ0eXBlcyI6Im91aV92MSIsImJsb2NrIjo3MDUxMDAsImFuY2hvcl9ibG9jayI6NzA1MTAwf).
 
 Congratulations! You are the proud owner of a Helium Network OUI. OUIs are
-numbered sequentially, so you get street cred for small numbers.
+numbered sequentially, so the lower you are, the earlier you were on the Network!.
