--- a/docs/mine-hnt/validators/monitor.mdx
+++ b/docs/mine-hnt/validators/monitor.mdx
@@ -24,7 +24,7 @@ Docker: ```docker exec miner miner peer book -s```
 
 Once you have an address listed in ```listen_addrs``` and ```peers``` in the table at the bottom, you're connected to the p2p network and good to go.
 
-## View Block Height
+## View block height
 
 When the genesis block is loaded, this query will work and return height 1 at least:
 
