--- a/docs/mine-hnt/validators/wallet.mdx
+++ b/docs/mine-hnt/validators/wallet.mdx
@@ -1,14 +1,14 @@
 ---
 id: validator-wallet
-title: Configure wallet
+title: Configure a wallet
 hide_title: true
-sidebar_label: Configure wallet
+sidebar_label: Configure a wallet
 slug: /mine-hnt/validators/validator-wallet
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-# Configure wallet
+# Configure a wallet
 
 You’ll need an owner wallet to:
 * Stake your test tokens (TNT)
