--- a/docs/mine-hnt/validators/setup.mdx
+++ b/docs/mine-hnt/validators/setup.mdx
@@ -17,18 +17,19 @@ The following options exist to build a Validator node:
 
 Regardless of the option, the genesis block needs to be installed:
 
-``` Download command goes here```
-```miner genesis load </absolute/path/to/genesis/block>```
+```
+Download command goes here
+miner genesis load </absolute/path/to/genesis/block>
+```
 
-
-## Configure Cloud Platform for Initial Blockhain Sync
+## Configure cloud platform for initial blockhain sync
 If you choose to run your validator in a cloud platform (e.g., Amazon AWS) your CPU usage credits could easily be depleted during the initial sync of the blockchain. To avoid having your instance throttled (e.g., Amazon EC2 instances), check with your cloud platform to see if you can temporarily uncap your instance by setting CPU credit usage to unlimited.
 
-## Port Forwarding
+## Port forwarding
 
 Regardless of using docker or source, before launching a validator node configure the TCP port on your network. Validators communicate to peers over port: 2154/TCP. The networking logic knows how to get around a lack of forwarding, but validators will gain improved performance by forwarding the port.
 
-## <a name="docker-image"></a>From Docker image
+## <a name="docker-image"></a>From docker image
 
 See technical requirements [here](/mine-hnt/validators/requirements).
 
@@ -45,7 +46,7 @@ To avoid needing to use docker with sudo privileges, add your user to the docker
 
 Log in and out of your account to apply these changes. You are now ready to use Docker.
 
-### Run a Docker Container
+### Run a docker container
 
 Note: on amd64 systems AVX support is required. Verify that it exists on your host system:
 ```
@@ -54,7 +55,7 @@ grep avx2 /proc/cpuinfo
 ```
 If nothing is returned from these commands, your host system does not have AVX support and your validator may not be stable.
 
-### Start Container
+### Start container
 
 Before running the container for the first time, it is advisable to pick a "system mount point", i.e., a directory in your host system; some long-term data is stored there. This allows you to easily maintain your validator's blockchain identity (i.e. swarm keys) and blockchain state through image updates.
 
@@ -73,7 +74,7 @@ docker run -d \
 quay.io/team-helium/miner:miner-xxxNN_YYYY.MM.DD
 ```
 
-Replace xxxNN with the architecture used, i.e. amd64 or arm64, and with the release date of the image.
+Replace ```xxxNN``` with the architecture used, i.e. amd64 or arm64, and with the release date of the image.
 
 The ```-d``` option runs in detached mode, which makes the command return or not; you may want to omit if you have a daemon manager running the docker for you.
 
@@ -83,7 +84,7 @@ The ```--name miner``` names the container, which makes interacting with the doc
 
 The ```--mount``` with the parameters above will mount the container's ```/var/data/``` directory to the systems directory ```/home/ec2-user/miner_data```.
 
-### Interact with the Validator within the Container
+### Interact with the validator within the container
 
 You may want to interrogate the Validator or interact with it. Docker's ```exec``` command enables this e.g.:
 ```docker exec miner miner info height```
