--- a/docs/mine-hnt/validators/setup.mdx
+++ b/docs/mine-hnt/validators/setup.mdx
@@ -74,7 +74,7 @@ docker run -d \
 quay.io/team-helium/validator:miner-val-{arch}_val{version}
 ```
 
-Replace ```xxxNN``` with the architecture used, i.e. amd64 or arm64, and with the release date of the image.
+Replace`{arch}` with the architecture used, i.e. `amd64` or `arm64`, and `{version}` with the version number of the image. We advise not using the latest tags as the underlying container will not be consistent.
 
 The ```-d``` option runs in detached mode, which makes the command return or not; you may want to omit if you have a daemon manager running the docker for you.
 
