--- a/docs/mine-hnt/validators/setup.mdx
+++ b/docs/mine-hnt/validators/setup.mdx
@@ -60,7 +60,7 @@ If nothing is returned from these commands, your host system does not have AVX s
 Before running the container for the first time, it is advisable to pick a "system mount point", i.e., a directory in your host system; some long-term data is stored there. This allows you to easily maintain your validator's blockchain identity (i.e. swarm keys) and blockchain state through image updates.
 
 If you are using a Linux system, you can just create a directory in your user's home directory:
-```mkdir ~/miner_data```
+```mkdir ~/validator_data```
 
 If you are using Ubuntu as user ubuntu, this path would now be ```/home/ubuntu/miner_data```. This will be used later.
 Now you can try the ```run``` command to start your container for the first time:
