--- a/docs/mine-hnt/validators/monitor.mdx
+++ b/docs/mine-hnt/validators/monitor.mdx
@@ -1,6 +1,6 @@
 ---
 id: validator-monitor
-title: Validators (Testnet)
+title: Monitor a validator
 hide_title: true
 sidebar_label: Monitor a validator
 slug: /mine-hnt/validators/validator-monitor
