--- a/docs/mine-hnt/validators/setup.mdx
+++ b/docs/mine-hnt/validators/setup.mdx
@@ -1,6 +1,6 @@
 ---
 id: validator-run
-title: Validators (Testnet)
+title: Run a validator
 hide_title: true
 sidebar_label: Run a validator
 slug: /mine-hnt/validators/validator-run
