--- a/docs/mine-hnt/validators/setup.mdx
+++ b/docs/mine-hnt/validators/setup.mdx
@@ -58,24 +58,22 @@ If nothing is returned from these commands, your host system does not have AVX s
 
 ### Start container
 
-Before running the container for the first time, it is advisable to pick a "system mount point", i.e., a directory in your host system; some long-term data is stored there. This allows you to easily maintain your validator's blockchain identity (i.e. swarm keys) and blockchain state through image updates.
+Before running the container for the first time, it is advisable to pick a "system mount point", i.e., a directory in your host system; some long-term data is stored there. This allows you to easily maintain your validator's blockchain identity (i.e. swarm keys) and blockchain state through image updates. The validator directory should be created on a persistent ebs volume (if aws) or something similar that lives across server lifetimes.
 
-If you are using a Linux system, you can just create a directory in your user's home directory:
-```mkdir ~/validator_data```
+```mkdir $HOME/validator_data; source=$HOME/validator_data```
 
-If you are using Ubuntu as user ubuntu, this path would now be ```/home/ubuntu/miner_data```. This will be used later.
-Now you can try the ```run``` command to start your container for the first time:
+Use the ```run``` command to start your container for the first time:
 
 ```
 docker run -d \
 --restart always \
 --publish 2154:2154/tcp \
 --name validator \
---mount type=bind,source=/home/ec2-user/validator_data,target=/var/data \
-quay.io/team-helium/validator:miner-val-{arch}_val{version}
+--mount type=bind,source=/home/ubuntu/validator_data,target=/var/data \
+quay.io/team-helium/validator:miner-val-ARCHVSN
 ```
 
-Replace`{arch}` with the architecture used, i.e. `amd64` or `arm64`, and `{version}` with the version number of the image. We advise not using the latest tags as the underlying container will not be consistent.
+Replace`ARCHVSN` with the architecture used, i.e. `amd64` or `arm64`, and with the version number of the image. We advise not using the latest tags as the underlying container will not be consistent.
 
 The ```-d``` option runs in detached mode, which makes the command return or not; you may want to omit if you have a daemon manager running the docker for you.
 
