add RAK WisBlock Arduino doc, fix broken external links, add link to Integrations

--- a/docs/use-the-network/devices/development/heltec-cubecell-htcc-ab01/arduino.mdx
+++ b/docs/use-the-network/devices/development/heltec-cubecell-htcc-ab01/arduino.mdx
@@ -58,7 +58,7 @@ Next, lets connect our board to our computer with a USB 2.0 A-Male to Micro B ca
 Download and install the latest version of [Arduino IDE](https://www.arduino.cc/en/Main/Software) for your preferred OS.
 
 * ​[Windows](https://www.arduino.cc/en/Guide/Windows)​
-* ​[Linux](https://www.arduino.cc/en/Guide/linux)​
+* ​[Linux](https://www.arduino.cc/en/Guide/Linux)​
 * ​[Mac OSX](https://www.arduino.cc/en/Guide/MacOSX)​
 
 ### Arduino Board Support <a id="arduino-board-support"></a>
@@ -287,5 +287,5 @@ Now let's head back to [Helium Console](https://console.helium.com/) and look at
   )}
 />
 
-Congratulations! You have just transmitted data on the Helium network! The next step is to learn how to use your device data to build applications, visit our Integrations docs here.
+Congratulations! You have just transmitted data on the Helium network! The next step is to learn how to use your device data to build applications, visit our Integrations docs [here](/use-the-network/console/integrations).
 
