--- a/docs/use-the-network/devices/development/heltec-cubecell-htcc-ab01/platformio.mdx
+++ b/docs/use-the-network/devices/development/heltec-cubecell-htcc-ab01/platformio.mdx
@@ -461,7 +461,7 @@ Activation messages are those seen when the device first attempts to join the ne
 Downlink messages are those delivered from the network to your target device.  
 Uplink messages are those messages delivered from your target device to the Helium network.
 
-Congratulations! You have just transmitted data on the Helium network! The next step is to learn how to use your device data to build applications, visit our Integrations docs here.
+Congratulations! You have just transmitted data on the Helium network! The next step is to learn how to use your device data to build applications, visit our Integrations docs [here](/use-the-network/console/integrations).
 
 ### Device Application Code Debugging
 Unfortunately at this time CubeCell does not support a debug probe that enjoys
