--- a/docs/use-the-network/devices/development/rak-wisblock-starter/platformio.mdx
+++ b/docs/use-the-network/devices/development/rak-wisblock-starter/platformio.mdx
@@ -586,7 +586,7 @@ Activation messages are those seen when the device first attempts to join the ne
 Downlink messages are those delivered from the network to your target device.  
 Uplink messages are those messages delivered from your target device to the Helium network.
 
-Congratulations! You have just transmitted data on the Helium network! The next step is to learn how to use your device data to build applications, visit our integration docs here.
+Congratulations! You have just transmitted data on the Helium network! The next step is to learn how to use your device data to build applications, visit our integration docs [here](/use-the-network/console/integrations).
 
 ### Device Application Code Debugging with PlatformIO
 If, as is frequently the case, your application misbehaves VSCode/PlatformIO does support board level debugging via various debug probes/interfaces. A general debug discussion can be found [here](https://docs.platformio.org/en/latest/plus/debugging.html) or debug probe specific discussion [here](https://docs.platformio.org/en/latest/plus/debugging.html#tools-debug-probes).
