--- a/docs/use-the-network/devices/development/rak-wisblock-starter/rak-wisblock-starter.mdx
+++ b/docs/use-the-network/devices/development/rak-wisblock-starter/rak-wisblock-starter.mdx
@@ -29,4 +29,5 @@ have multiple combinations of expansion boards added to it. The full
 
 ### Firmware Quickstart Guides
 
+* [Arduino Guide](/use-the-network/devices/development/rak-wisblock-starter/arduino)
 * [PlatformIO Guide](/use-the-network/devices/development/rak-wisblock-starter/platformio)
