--- a/docs/use-the-network/devices/development/sparkfun-pro-rf/arduino.mdx
+++ b/docs/use-the-network/devices/development/sparkfun-pro-rf/arduino.mdx
@@ -84,7 +84,7 @@ In order to fully communicate with the LoRa radio transceiver on the board, you'
 Download and install the latest version of [Arduino IDE](https://www.arduino.cc/en/Main/Software) for your preferred OS.
 
 * [Windows](https://www.arduino.cc/en/Guide/Windows)
-* [Linux](https://www.arduino.cc/en/Guide/linux)
+* [Linux](https://www.arduino.cc/en/Guide/Linux)
 * [Mac OSX](https://www.arduino.cc/en/Guide/MacOSX)
 
 ### Arduino Board Support
@@ -215,4 +215,4 @@ Now let's head back to [Helium Console](https://console.helium.com) and look at 
   )}
 />
 
-Congratulations! You have just transmitted data on the Helium network! The next step is to learn how to use your device data to build applications, visit our Integrations docs here.
+Congratulations! You have just transmitted data on the Helium network! The next step is to learn how to use your device data to build applications, visit our Integrations docs [here](/use-the-network/console/integrations).
