--- a/docs/use-the-network/devices/development/st-b-l072z-lrwan1/arduino.mdx
+++ b/docs/use-the-network/devices/development/st-b-l072z-lrwan1/arduino.mdx
@@ -83,7 +83,7 @@ Download and install the latest version of
 [Arduino IDE](https://www.arduino.cc/en/Main/Software) for your preferred OS.
 
 - [Windows](https://www.arduino.cc/en/Guide/Windows)
-- [Linux](https://www.arduino.cc/en/Guide/linux)
+- [Linux](https://www.arduino.cc/en/Guide/Linux)
 - [Mac OSX](https://www.arduino.cc/en/Guide/MacOSX)
 
 ### STM32L0 Core Support & Libraries
@@ -198,4 +198,5 @@ our device page, you should see something similar to the screenshot below.
 
 Congratulations! You have just transmitted data on the Helium network! The next
 step is to learn how to use your device data to build applications, visit our
-Integrations docs [here](#).
+Integrations docs [here](/use-the-network/console/integrations).
+
