--- a/docs/use-the-network/devices/ready-to-use/digital-matter-lorawan-gps.mdx
+++ b/docs/use-the-network/devices/ready-to-use/digital-matter-lorawan-gps.mdx
@@ -168,7 +168,7 @@ join the network and transmit data.
 ### Usage
 
 These devices use an accelerometer to detect movement, allowing it to decide
-when an asset is in-trip and when it is stationary. This allows it to schedule
+when an asset is in-trip and when it is stationary. This allows it schedule
 battery-hungry GPS fixes when appropriate, to optimize battery life. Each time a
 status update is scheduled, the device will attempt a GPS fix, then transmit
 results \(regardless of whether a fix succeeded or not\).
@@ -213,7 +213,7 @@ transmissions within a day.
 
 Helium now supports myDevices and the Cayenne LPP \(low power payload\) format.
 Cayenne features a simple drag and drop interface that allows developers,
-designers and engineers to quickly prototype and share their connected device
+designers and engineers quickly prototype and share their connected device
 projects.
 
 To learn more about myDevices Cayenne integration, visit myDevices Cayenne
