--- a/docs/use-the-network/devices/development/adafruit-feather-m0-rfm95/arduino.mdx
+++ b/docs/use-the-network/devices/development/adafruit-feather-m0-rfm95/arduino.mdx
@@ -66,7 +66,7 @@ In order to use the RFM95 radio module onboard the Feather M0 for LoRaWAN we'll 
 Download and install the latest version of [Arduino IDE](https://www.arduino.cc/en/Main/Software) for your preferred OS.
 
 * [Windows](https://www.arduino.cc/en/Guide/Windows)
-* [Linux](https://www.arduino.cc/en/Guide/linux)
+* [Linux](https://www.arduino.cc/en/Guide/Linux)
 * [Mac OSX](https://www.arduino.cc/en/Guide/MacOSX)
 
 ### Arduino Board Support
@@ -193,4 +193,4 @@ Now let's head back to [Helium Console](https://console.helium.com) and look at 
   )}
 />
 
-Congratulations! You have just transmitted data on the Helium network! The next step is to learn how to use your device data to build applications, visit our Integrations docs here.
+Congratulations! You have just transmitted data on the Helium network! The next step is to learn how to use your device data to build applications, visit our Integrations docs [here](/use-the-network/console/integrations).
