--- a/docs/use-the-network/devices/devices.mdx
+++ b/docs/use-the-network/devices/devices.mdx
@@ -8,7 +8,7 @@ slug: /use-the-network/devices
 ## Helium Devices
 
 Find ready to use devices or learn how to develop your own. The Helium network supports any LoRaWAN capable device meeting the
-[v1.0.2 specification](https://lora-alliance.org/sites/default/files/2018-05/lorawan1_0_2-20161012_1398_1.pdf).
+[v1.0.2 specification](https://lora-alliance.org/resource_hub/lorawan-specification-v1-0-2).
 
 ### Ready to Use Devices
 
