--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -16,6 +16,8 @@ Validators are a new entity on the Helium Blockchain that will perform the work 
 
 More information about validators and to register interest in staking go [here](https://www.helium.com/stake).
 
+**NOTE: Expect frequent updates during testnet operation which could result in api and faucet service interruptions and may need to be restarted.**
+
 To test validator nodes:
 * users need test tokens (TNT) to stake test validator nodes
 * the testnet consensus group will be sized dynamically based on the number of active testnet participants
