--- a/docs/mine-hnt/validators/monitor.mdx
+++ b/docs/mine-hnt/validators/monitor.mdx
@@ -20,7 +20,7 @@ Once your validator is running perform an initial health check to verify you're 
 
 Source: ```miner peer book -s```
 
-Docker: ```docker exec miner miner peer book -s```
+Docker: ```docker exec validator miner peer book -s```
 
 Once you have an address listed in ```listen_addrs``` and ```peers``` in the table at the bottom, you're connected to the p2p network and good to go.
 
@@ -30,7 +30,7 @@ When the genesis block is loaded, this query will work and return height 1 at le
 
 Source: ```miner info height```
 
-Docker: ```docker exec miner miner info height```
+Docker: ```docker exec validator miner info height```
 
 If you’re syncing something similar to the following should appear:
 ```
