--- a/docs/mine-hnt/validators/wallet.mdx
+++ b/docs/mine-hnt/validators/wallet.mdx
@@ -31,7 +31,7 @@ At any time use ```-h``` or ```--help``` to get more help for a command.
 
 To obtain TNT tokens visit [Obtain testing token (TNT)](/mine-hnt/validators/validator-tnt).
 
-**NOTE: always make sure to inspect the transaction _before_ adding the ```--commit``` option to sign and submit it to the api.**
+**```--commit```: NOTE always make sure to inspect the transaction _before_ adding the ```--committ```  option to sign and submit it to the api. There is no undo.**
 
 ### Stake tokens
 After you have received your TNT you need to stake these tokens. 
@@ -55,7 +55,10 @@ If you unstake tokens the validator node enters a cooldown period. During this c
 ```./bin/helium-wallet unstake <public-address> --commit```
 
 ### Validator transfers 
-A wallet can be bonded with multiple validator nodes. Validator nodes can be transferred to different wallets. Staking amount can also be transferred to someone else.
+A validator node's stake can be transferred to other validator nodes in the same wallet or a different one. 
+
+If the stake is transferred to a validator node in a different wallet, the owner of the other wallet must accept the transfer to complete the transaction.
+
 
 #### To transfer stake to a new validator node in the same wallet:
 ```./bin/helium-wallet validators transfer create --new-address <new-public-address> --old-address <old-public-address> --commit```
