--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -26,7 +26,7 @@ To test validator nodes:
 
 To run a testnet validator node refer to the following:
 
-* [Technical requirements](/mine-hnt/validators/requirements)
+* [Technical Requirements](/mine-hnt/validators/requirements)
 * [Configure wallet](/mine-hnt/validators/validator-wallet)
 * [Obtain testing tokens (TNT)](/mine-hnt/validators/validator-tnt)
 * [Run a validator](/mine-hnt/validators/validator-run)
