--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -27,7 +27,7 @@ To test validator nodes:
 To run a testnet validator node refer to the following:
 
 * [Technical Requirements](/mine-hnt/validators/requirements)
-* [Configure wallet](/mine-hnt/validators/validator-wallet)
+* [Configure Wallet](/mine-hnt/validators/validator-wallet)
 * [Obtain testing tokens (TNT)](/mine-hnt/validators/validator-tnt)
 * [Run a validator](/mine-hnt/validators/validator-run)
 * [Monitor a validator](/mine-hnt/validators/validator-monitor)
