--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -30,7 +30,7 @@ To run a testnet validator node refer to the following:
 * [Configure Wallet](/mine-hnt/validators/validator-wallet)
 * [Obtain testing tokens (TNT)](/mine-hnt/validators/validator-tnt)
 * [Run a validator](/mine-hnt/validators/validator-run)
-* [Monitor a validator](/mine-hnt/validators/validator-monitor)
+* [Monitor a Validator](/mine-hnt/validators/validator-monitor)
 * [Troubleshooting](/mine-hnt/validators/validator-troubleshooting)
 * [Test cases](/mine-hnt/validators/validator-testcases)
 
