--- a/docs/mine-hnt/validators/testtokens.mdx
+++ b/docs/mine-hnt/validators/testtokens.mdx
@@ -9,7 +9,7 @@ slug: /mine-hnt/validators/validator-tnt
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Obtain Testnet Network Tokens (TNT)
-After your owner wallet is set up you need to obtain test tokens used to stake the validator node.
+After your owner wallet is set up you need to obtain TNT used to stake the validator node.
 
 To obtain these TNT you need your public key. See View wallet balance and public key section for instructions on how to obtain. 
 
