--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -32,6 +32,6 @@ To run a testnet validator node refer to the following:
 * [Run a validator](/mine-hnt/validators/validator-run)
 * [Monitor a Validator](/mine-hnt/validators/validator-monitor)
 * [Troubleshooting](/mine-hnt/validators/validator-troubleshooting)
-* [Test cases](/mine-hnt/validators/validator-testcases)
+* [Test Cases](/mine-hnt/validators/validator-testcases)
 
 Use the ```#validator``` channel on our [Discord](https://discord.gg/helium) server to provide feedback and report issues.
